create wallet, mint nft
